<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvregist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_form"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvnama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvregist"
        android:text="@string/nama"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/etnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvregist"
        android:layout_toRightOf="@id/tvnama"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvnama"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etnama"
        android:layout_toRightOf="@id/tvemail"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvangkatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvemail"
        android:text="@string/angkatan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/etangkatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etemail"
        android:inputType="number"
        android:layout_toRightOf="@id/tvangkatan"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/tvnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvangkatan"
        android:text="@string/nim"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/etnim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etangkatan"
        android:inputType="number"
        android:layout_toRightOf="@id/tvnim"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btncancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvnim"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/btnregist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btncancel"
        android:layout_below="@id/tvnim"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="70dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark"/>


</RelativeLayout>